cfn.yml
# QuickOpsStack

AWSTemplateFormatVersion: "2010-09-09"
Description: Template to create a Spot EC2 instance on Ubuntu with automated replacement and bootstrap scripts from a Git repo.

Parameters:
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "Key pair to access the instance."

  OpenvpnUser1Password:
    Type: String
    Description: "The password for the user1 in OpenVPN"

  DomainName:
    Type: String
    Description: "The domain name."
    Default: "None"

  AfraidUpdateKey:
    Type: String
    Description: "The free dns domain name. Only the key from Dynamic DNS Direct URL."
    Default: "None"

  TelegramProxySecret:
    Type: String
    Description: "32 Hex Chars for Telegram Proxy Secret."
    Default: "ABCDEF00000000000000000987654321"
  
  TelegramProxyPort:
    Type: String
    Description: "The port that will be opened for the Telegram Proxy"
    Default: "36343"
  
  OpenVpnPort:
    Type: String
    Description: "The port that will be opened for the OpenVPN"
    Default: "27257"

  ElasticIpAllocationId:
    Type: String
    Description: "The Allocation ID of the EIP you like to be used. If not provided, no EIP will be used and IP will change often."
    Default: "None"

  GitRepoUrl:
    Type: String
    Description: "URL of the Git repository to clone."
    Default: "https://github.com/cryptixism/quickops.git"

  GitRepoBranch:
    Type: String
    Description: "The branch to clone."
    Default: "main"

  MaxSpotPrice:
    Type: String
    Description: "The maximum price you're willing to pay for the Spot Instance per hour. This may affect availability of the service."
    Default: "0.004"  # Default is minimum spot price for t3.micro

  XrayPanelPort:
    Type: String
    Description: "The port that will be opened for the xray panel (x-ui)"
    Default: "48348"

  XrayClientPortFrom:
    Type: String
    Description: "The port that will be opened for the xray client"
    Default: "51000"

  XrayClientPortTo:
    Type: String
    Description: "The port that will be opened for the xray client"
    Default: "59000"

  LatestUbuntuAmi:
    Type: String
    Description: "The AMI ID for the latest Ubuntu version."
    Default: "/aws/service/canonical/ubuntu/server/24.10/stable/current/amd64/hvm/ebs-gp3/ami-id"  # Default value pointing to the specified Ubuntu AMI

Resources:
  # S3 bucket
  QuickOpsS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        !Sub
          - "quick-ops-bucket-${RandomGUID}"
          - { RandomGUID: !Select [0, !Split ["-", !Select [2, !Split ["/", !Ref AWS::StackId ]]]] }
      VersioningConfiguration:
        Status: Enabled

  # Create a new VPC
  QuickOpsVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"  # CIDR block for the VPC
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: "QuickOpsVPC"

  # Create an Internet Gateway
  QuickOpsInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Name"
          Value: "QuickOpsInternetGateway"

  # Attach the Internet Gateway to the VPC
  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref QuickOpsVPC
      InternetGatewayId: !Ref QuickOpsInternetGateway

  # Create 3 public subnets in different availability zones
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref QuickOpsVPC
      CidrBlock: "10.0.1.0/24"  # First public subnet CIDR block
      AvailabilityZone: !Select [0, !GetAZs '']  # First AZ
      MapPublicIpOnLaunch: true  # Automatically assign public IPs

  PublicSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref QuickOpsVPC
      CidrBlock: "10.0.2.0/24"  # Second public subnet CIDR block
      AvailabilityZone: !Select [1, !GetAZs '']  # Second AZ
      MapPublicIpOnLaunch: true  # Automatically assign public IPs

  PublicSubnet3:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref QuickOpsVPC
      CidrBlock: "10.0.3.0/24"  # Third public subnet CIDR block
      AvailabilityZone: !Select [2, !GetAZs '']  # Third AZ
      MapPublicIpOnLaunch: true  # Automatically assign public IPs

  # Create a route table for the public subnets
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref QuickOpsVPC  # Associate this route table with the same VPC
      Tags:
        - Key: "Name"
          Value: "PublicRouteTable"

  # Create a route to the Internet Gateway in the public route table
  PublicRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"  # Route all traffic to the internet
      GatewayId: !Ref QuickOpsInternetGateway  # Ensure this references the correct IGW

  # Associate the public route table with the public subnets
  PublicSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet3RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet3
      RouteTableId: !Ref PublicRouteTable

  # Security Group for the EC2 instance
  QuickOpsSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Quick Ops - Allow SSH and HTTP access"
      VpcId: !Ref QuickOpsVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
          Description: "ssh"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: !Ref TelegramProxyPort
          ToPort: !Ref TelegramProxyPort
          Description: "mtg"
          CidrIp: "0.0.0.0/0"   
        - IpProtocol: "udp"
          FromPort: !Ref OpenVpnPort
          ToPort: !Ref OpenVpnPort
          Description: "OpenVPN"
          CidrIp: "0.0.0.0/0"   
        - IpProtocol: "tcp"
          FromPort: !Ref XrayPanelPort
          ToPort: !Ref XrayPanelPort
          Description: "x-ui"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: !Ref XrayClientPortFrom
          ToPort: !Ref XrayClientPortTo
          Description: "xray"
          CidrIp: "0.0.0.0/0"

  # IAM Role for the Spot Instance
  QuickOpsSpotInstanceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "ec2.amazonaws.com"
            Action: "sts:AssumeRole"
      Policies:
        - PolicyName: "SpotAndSSMReadPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              # Grant EC2 instances access to necessary Spot and Auto Scaling actions
              - Effect: "Allow"
                Action:
                  - "ec2:DescribeSpotInstanceRequests"
                  - "ec2:DescribeInstances"
                  - "autoscaling:DescribeAutoScalingGroups"
                  - "autoscaling:UpdateAutoScalingGroup"
                Resource: "*"  # Allow actions on all resources; restrict as necessary
              # Grant read-only access to SSM parameters under /manual/conf/*
              - Effect: "Allow"
                Action:
                  - "ssm:GetParameter"
                  - "ssm:GetParameters"
                Resource: 
                  - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/manual/conf/*"  # Using !Sub for dynamic ARN
        - PolicyName: "S3AccessPolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "s3:GetObject"
                  - "s3:GetObjectVersion"
                  - "s3:PutObject"
                  - "s3:ListBucket"
                  - "s3:ListBucketVersions"
                Resource: 
                  - !Sub "${QuickOpsS3Bucket.Arn}/*"
                  - !Sub "${QuickOpsS3Bucket.Arn}"
        - PolicyName: "AssociateEipWithEc2"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action: 
                  - "ec2:AssociateAddress"
                  - "ec2:ModifyInstanceAttribute"
                Resource: 
                  - "arn:aws:ec2:*:*:instance/*"
                  - "arn:aws:ec2:*:*:elastic-ip/*"
                  - "arn:aws:ec2:*:*:network-interface/*"
  
  # Instance Profile that will associate the above IAM role with the EC2 instance
  QuickOpsSpotInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - Ref: QuickOpsSpotInstanceRole

  # Launch Template for the EC2 Spot Instance
  QuickOpsSpotInstanceLaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        KeyName: !Ref KeyPairName            # Use the key pair parameter
        IamInstanceProfile:
          Arn: !GetAtt QuickOpsSpotInstanceProfile.Arn  # Attach the IAM role
        ImageId: !Sub "{{resolve:ssm:${LatestUbuntuAmi}}}"  # Use SSM parameter to fetch the specified Ubuntu AMI ID
        BlockDeviceMappings:  # Specify EBS volume configuration
          - DeviceName: "/dev/xvda"
            Ebs:
              VolumeSize: 20  # Size in GB
              VolumeType: "gp3"  # Use gp3 EBS volume type
              DeleteOnTermination: true  # Delete volume on termination
        SecurityGroupIds:
          - !Ref QuickOpsSecurityGroup  # Attach the security group to the instance
        UserData:  # User data to bootstrap the instance
          Fn::Base64: !Sub |
            #!/bin/bash
            set -x
            sudo apt-get update
            sudo apt-get -y install awscli net-tools
            ### parameters ###
            echo "export xray_port=${XrayClientPortFrom}" >> /env
            echo "export xui_port=${XrayPanelPort}" >> /env
            echo "export mtg_port=${TelegramProxyPort}" >> /env
            echo "export openvpn_port=${OpenVpnPort}" >> /env
            echo "export mtg_secret=${TelegramProxySecret}" >> /env
            echo "export eip_allocation_id=${ElasticIpAllocationId}" >> /env
            echo "export afraid_update_key=${AfraidUpdateKey}" >> /env
            echo "export domain_name=${DomainName}" >> /env
            echo "export openvpn_user1_password='${OpenvpnUser1Password}'" >> /env
            echo "export s3_bucket_arn=${QuickOpsS3Bucket.Arn}" >> /env
            echo "export scripts_dir=/opt/scripts" >> /env
            ### prepare ###
            source /env
            git clone -b ${GitRepoBranch} ${GitRepoUrl} $scripts_dir
            chmod +x -R $scripts_dir
            source $scripts_dir/bootstrap.sh

  # Auto Scaling Group to manage the Spot Instances
  SpotInstanceAutoScalingGroup:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      MinSize: "1"  # Minimum size of the Auto Scaling Group
      MaxSize: "1"  # Maximum size of the Auto Scaling Group
      DesiredCapacity: "1"  # Desired count of instances is 1
      VPCZoneIdentifier:
        - !Ref PublicSubnet1  # Reference the first public subnet for instance placement
        - !Ref PublicSubnet2  # Reference the second public subnet for instance placement
        - !Ref PublicSubnet3  # Reference the third public subnet for instance placement
      MixedInstancesPolicy:
        LaunchTemplate:
          LaunchTemplateSpecification:
            LaunchTemplateId: !Ref QuickOpsSpotInstanceLaunchTemplate  # Reference the launch template
            Version: !GetAtt QuickOpsSpotInstanceLaunchTemplate.LatestVersionNumber  # Use the latest version of the Launch Template
          Overrides:
            - InstanceType: "t4g.nano"
            - InstanceType: "t4g.micro"
            - InstanceType: "t4g.small" 
            - InstanceType: "t4g.medium"
        InstancesDistribution:
          SpotAllocationStrategy: "lowest-price"  # Set allocation strategy to lowest price
          SpotMaxPrice: !Ref MaxSpotPrice  # Set the maximum price to match the parameter
          SpotInstancePools: 9  # Number of Spot instance pools to use
          OnDemandPercentageAboveBaseCapacity: 0  # Only use Spot instances
